kubernetes/4-Nodejs+Mysql-app/mysql-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: ivolve
spec:
  serviceName: mysql-svc #my headless SVC  
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      tolerations:
      - key: workload
        operator: Equal
        value: worker
        effect: NoSchedule
      
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: mysql
        
        # Environment variable from secret
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  
  # PVC template - creates a PVC for each pod
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteMany" ]
      resources:
        requests:
          storage: 1Gi
