kubernetes/4-Nodejs+Mysql-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "worker"
          effect: "NoSchedule"
      imagePullSecrets:
        - name: dockerhub-secret


      containers:
        - name: nodejs-app
          image: abdelrahmangad275/kubernets-app:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20

          # Requists and Limits
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
              
          volumeMounts:
            - name: nodejs-data
              mountPath: /usr/src/app/logs
          

      volumes:
        - name: nodejs-data
          persistentVolumeClaim:
            claimName: nodejs-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: ivolve
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - port: 3000
      targetPort: 3000
