kubernetes/4-Nodejs+Mysql-app/headless-svc-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: ivolve
  labels:
    app: mysql
spec:
  clusterIP: None  
  selector:
    app: mysql
  ports:
    - port: 3306
      name: mysql
